test/conformance/chainsaw/validate/clusterpolicy/cornercases/variable-substitution-failure-messages(deprecated)/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: uid-groups-fsgroup-validate
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
